--- a/articles/backup/index.yml
+++ b/articles/backup/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: dcurwin
   ms.author: dacurwin
   ms.date: 12/01/2019
-  ms.openlocfilehash: 8f15b6bf98381f921d9e25e502b451d109a6e9a1
-  ms.sourcegitcommit: fdec8e8bdbddcce5b7a0c4ffc6842154220c8b90
+  ms.openlocfilehash: 0060cc16378ca006e975f4f55da5099179778753
+  ms.sourcegitcommit: 0b80a5802343ea769a91f91a8cdbdf1b67a932d3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83651901"
+  ms.lasthandoff: 05/25/2020
+  ms.locfileid: "83835670"
 landingContent:
 - title: 了解 Azure 备份
   linkLists:
@@ -148,5 +148,5 @@ landingContent:
       url: https://azure.microsoft.com/pricing/details/backup/
     - text: Azure 备份服务更新
       url: https://azure.microsoft.com/updates/?product=backup
-    - text: Azure 备份 - Microsoft 问答
+    - text: 有关 Azure 备份的 Microsoft Q&A 问题页面
       url: https://docs.microsoft.com/answers/topics/azure-backup.html
