--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -161,8 +161,8 @@
       href: 'https://azure.microsoft.com/roadmap/?category=intelligence-analytics'
     - name: 请求更改
       href: 'https://feedback.azure.com/forums/327234-data-lake'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDataLake'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-data-lake-analytics.html'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/data-lake-analytics/'
     - name: 定价计算器
