--- a/articles/governance/management-groups/toc.yml
+++ b/articles/governance/management-groups/toc.yml
@@ -14,6 +14,8 @@
       href: ./create.md
     - name: 管理资源
       href: ./manage.md
+    - name: 保护资源层次结构
+      href: ./how-to/protect-resource-hierarchy.md
 - name: 参考
   items:
     - name: Azure CLI
