--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -182,8 +182,8 @@
       href: frequently-asked-questions.md
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/home?forum=WAVirtualMachinesVirtualNetwork'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-network.html'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/network-watcher/'
     - name: 服务更新
