commit translated contents

--- a/articles/networking/index.yml
+++ b/articles/networking/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: kumud
   manager: mtillman
   ms.date: 03/17/2020
-  ms.openlocfilehash: 99b15e3b311a033e346cb8994bb9109401d90a20
-  ms.sourcegitcommit: 958f086136f10903c44c92463845b9f3a6a5275f
+  ms.openlocfilehash: eba71e790c9da1978e0c9cac84b1913447972db2
+  ms.sourcegitcommit: cf7caaf1e42f1420e1491e3616cc989d504f0902
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/20/2020
-  ms.locfileid: "83715760"
+  ms.lasthandoff: 05/22/2020
+  ms.locfileid: "83800717"
 highlightedContent:
   items:
   - title: 什么是 Azure 网络？
@@ -297,7 +297,7 @@ conceptualContent:
     footerLink:
       url: ../cdn/index.yml
       text: 查看详细信息
-  - title: 自动分支连接
+  - title: 统一的中心和辐射型网络
     links:
     - url: ../virtual-wan/virtual-wan-about.md
       itemType: overview
