--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 50252d0a308c4232b84bffddd905d8a84e1be0d8
-  ms.sourcegitcommit: a3c6efa4d4a48e9b07ecc3f52a552078d39e5732
+  ms.openlocfilehash: 87190c5cab772e4b8dc04672066e575b10c14533
+  ms.sourcegitcommit: cf7caaf1e42f1420e1491e3616cc989d504f0902
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/20/2020
-  ms.locfileid: "83707966"
+  ms.lasthandoff: 05/22/2020
+  ms.locfileid: "83800777"
 highlightedContent:
   items:
   - title: 什么是语音服务？
@@ -130,13 +130,13 @@ conceptualContent:
   - title: 工具
     links:
     - itemType: overview
-      text: 关于 SPX - 无需编写代码即可使用语音服务
+      text: 关于语音 CLI（无代码命令行工具）
       url: spx-overview.md
     - itemType: how-to-guide
-      text: SPX 基础知识
+      text: 语音 CLI 基础知识（安装和示例）
       url: spx-basics.md
     - itemType: overview
-      text: 关于 Speech Studio - 无代码语音服务自定义
+      text: 关于 Speech Studio（自定义）
       url: https://speech.microsoft.com
   - title: Hosting
     links:
