--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -32,8 +32,6 @@
           href: quickstarts/speech-to-text-from-file.md
         - name: 识别存储在 Blob 存储中的语音
           href: quickstarts/from-blob.md
-        - name: 通过参考输入进行发音评估
-          href: 'rest-speech-to-text.md#pronunciation-assessment-parameters'
     - name: 操作指南
       items:
         - name: 选择语音识别模式
@@ -563,11 +561,14 @@
           href: devices-sdk-release-notes.md
 - name: 工具
   items:
-    - name: SPX
+    - name: 语音 CLI
+      displayName: SPX
       items:
-        - name: 什么是 SPX？
+        - name: 什么是语音 CLI？
+          displayName: What is SPX?
           href: spx-overview.md
-        - name: SPX 基础知识
+        - name: 语音 CLI 基础知识
+          displayName: SPX basics
           href: spx-basics.md
     - name: Speech Studio
       items:
