--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -11,15 +11,15 @@
   items:
     - name: 查看用户的访问权限
       href: check-access.md
+    - name: ARM 模板
+      displayName: Resource Manager
+      href: quickstart-role-assignments-template.md
 - name: 教程
   items:
     - name: 授予用户访问权限 - 门户
       href: quickstart-assign-role-user-portal.md
     - name: 授予用户访问权限 - PowerShell
       href: tutorial-role-assignments-user-powershell.md
-    - name: 授予用户访问权限 - 资源管理器模板
-      displayName: 'ARM, resource manager template'
-      href: tutorial-role-assignments-user-template.md
     - name: 授予组访问权限 - PowerShell
       href: tutorial-role-assignments-group-powershell.md
     - name: 创建自定义角色 - PowerShell
@@ -67,7 +67,8 @@
           href: role-assignments-cli.md
         - name: REST API
           href: role-assignments-rest.md
-        - name: 模板
+        - name: ARM 模板
+          displayName: Resource Manager
           href: role-assignments-template.md
     - name: 列出拒绝分配
       items:
@@ -113,8 +114,8 @@
       href: /cli/azure/role?view=azure-cli-latest
     - name: REST API
       href: /rest/api/authorization/
-    - name: 资源管理器模板
-      displayName: ARM
+    - name: ARM 模板
+      displayName: Resource Manager
       items:
         - name: 角色分配
           href: /azure/templates/microsoft.authorization/roleassignments
