--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -617,8 +617,8 @@
       href: 'https://azure.microsoft.com/blog/tag/azure-stream-analytics/'
     - name: 反馈论坛
       href: 'https://feedback.azure.com/forums/270577-azure-stream-analytics'
-    - name: 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/azure/home?forum=AzureStreamAnalytics'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-stream-analytics.html'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/stream-analytics/'
     - name: 定价计算器
