--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -125,8 +125,8 @@
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 博客
       href: 'https://azure.microsoft.com/blog/topics/networking/'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesVirtualNetwork'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-network.html'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/traffic-manager/'
     - name: 定价计算器
