commit translated contents

--- a/articles/openshift/toc.yml
+++ b/articles/openshift/toc.yml
@@ -1,10 +1,12 @@
 - name: Azure Red Hat OpenShift
   href: index.yml
 - name: 概述
+  expanded: true
   items:
     - name: 关于 Azure Red Hat OpenShift
       href: intro-openshift.md
 - name: 教程
+  expanded: true
   items:
     - name: 1 - 创建 Azure Red Hat OpenShift 4 群集
       href: tutorial-create-cluster.md
@@ -13,7 +15,6 @@
     - name: 3 - 删除 Azure Red Hat OpenShift 4 群集
       href: tutorial-delete-cluster.md
 - name: 操作指南
-  expanded: true
   items:
     - name: 创建专用 Azure Red Hat OpenShift 4 群集
       href: howto-create-private-cluster-4x.md
@@ -37,7 +38,6 @@
       items:
         - name: 为 Azure Red Hat OpenShift 3.11 设置 Azure Red Hat OpenShift 开发环境
           href: howto-setup-environment.md
-          expanded: true
           items:
             - name: 创建 Azure AD 租户
               href: howto-create-tenant.md
@@ -85,7 +85,9 @@
       href: support-policies-v4.md
     - name: 区域可用性
       href: 'https://azure.microsoft.com/regions/services/'
-    - name: Red Hat OpenShift 文档
-      href: 'https://docs.openshift.com/aro/welcome/index.html'
+    - name: Azure Red Hat OpenShift 4.3 文档
+      href: 'https://docs.openshift.com/aro/4/welcome/index.html'
+    - name: Azure Red Hat OpenShift 3.11 文档
+      href: 'https://docs.openshift.com/aro/3/welcome/index.html'
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
