--- a/articles/active-directory/b2b/toc.yml
+++ b/articles/active-directory/b2b/toc.yml
@@ -131,8 +131,8 @@
           href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
         - name: Azure 路线图
           href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
-        - name: MSDN 论坛
-          href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=WindowsAzureAD'
+        - name: Microsoft Q&A 问题页面
+          href: 'https://docs.microsoft.com/answers/topics/azure-active-directory.html'
         - name: 定价
           href: 'https://azure.microsoft.com/pricing/details/active-directory/'
         - name: 定价计算器
