commit translated contents

--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -269,8 +269,8 @@
       href: 'https://aka.ms/apimwish'
     - name: 视频
       href: 'https://azure.microsoft.com/documentation/videos/index/?services=api-management'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=azureapimgmt'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-api-management.html'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-api-management'
     - name: API 设计指南
