--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -266,7 +266,7 @@
     - name: Azure 文件同步发行说明
       href: storage-files-release-notes.md
     - name: Azure 存储论坛
-      href: 'https://social.msdn.microsoft.com/forums/azure/home?forum=windowsazuredata'
+      href: 'https://docs.microsoft.com/answers/products/azure?product=storage'
     - name: Stack Overflow 上的 Azure 存储
       href: 'https://stackoverflow.com/questions/tagged/windows-azure-storage'
     - name: Azure 存储的定价
