--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -57,6 +57,8 @@
           href: automation-create-account-template.md
         - name: 使用 Amazon Web Services 配置身份验证
           href: automation-config-aws-account.md
+        - name: 配置使用 Azure AD 进行的身份验证
+          href: automation-use-azure-ad.md
         - name: 管理自动化运行方式帐户
           href: manage-runas-account.md
         - name: 管理角色权限和安全性
@@ -297,8 +299,8 @@
       href: 'https://azure.microsoft.com/documentation/videos/azure-automation-101-with-powershell-and-eamon-o-reilly/'
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/?category=management-tools&query=automation'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=azureautomation'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/en-us/answers/topics/azure-automation.html'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/automation/'
     - name: 定价计算器
