--- a/articles/governance/index.yml
+++ b/articles/governance/index.yml
@@ -10,13 +10,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 05/20/2020
-  ms.openlocfilehash: 4f88fc9d72a7a8bbdf80ed8553888da3b975804f
-  ms.sourcegitcommit: 50673ecc5bf8b443491b763b5f287dde046fdd31
+  ms.date: 05/22/2020
+  ms.openlocfilehash: 2559676a867478b486c70fbb43f176451b91672f
+  ms.sourcegitcommit: 0b80a5802343ea769a91f91a8cdbdf1b67a932d3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/20/2020
-  ms.locfileid: "83683533"
+  ms.lasthandoff: 05/25/2020
+  ms.locfileid: "83836016"
 highlightedContent:
   items:
   - title: 治理概述
@@ -39,6 +39,8 @@ productDirectory:
     links:
     - url: ./management-groups/overview.md
       text: 概述
+    - url: ./management-groups/how-to/protect-resource-hierarchy.md
+      text: 保护资源层次结构
     - url: ./management-groups/index.yml
       text: 查看更多 >
   - title: Azure Policy
