--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -585,7 +585,7 @@
             - name: 存储资源管理器可访问性
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Azure 存储论坛
-          href: 'https://social.msdn.microsoft.com/forums/azure/home?forum=windowsazuredata'
+          href: 'https://docs.microsoft.com/answers/topics/azure-blob-storage.html'
         - name: Stack Overflow 上的 Azure 存储
           href: 'https://stackoverflow.com/questions/tagged/windows-azure-storage'
         - name: Blob 存储的定价
@@ -698,16 +698,22 @@
               href: data-lake-storage-supported-azure-services.md
             - name: 支持的开源平台
               href: data-lake-storage-supported-open-source-platforms.md
-        - name: 监视和故障排除
+        - name: 监视
           items:
-            - name: 监视、诊断和故障排除
-              href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Azure Monitor 中的指标
-              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 迁移到新指标
+            - name: 监视存储帐户
+              href: ../common/monitor-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 从经典指标迁移
               href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 存储分析日志
-              href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 监视（经典）
+              items:
+                - name: 存储分析
+                  href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 指标
+                  href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 日志
+                  href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 监视、诊断和故障排除
+                  href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 如何
       items:
         - name: 创建
@@ -847,8 +853,8 @@
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 存储资源管理器可访问性
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 论坛
-          href: 'https://social.msdn.microsoft.com/forums/azure/home?forum=windowsazuredata'
+        - name: Microsoft Q&A 问题页面
+          href: 'https://docs.microsoft.com/answers/products/topics/azure-blob-storage.html'
         - name: Stack Overflow 上的 Azure 存储
           href: 'https://stackoverflow.com/questions/tagged/windows-azure-storage'
         - name: 定价
