--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -325,8 +325,8 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-maps'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/azure/home?forum=azurelbs'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-maps.html'
     - name: Azure Maps 视频
       href: 'https://aka.ms/AzureMapsVideos'
     - name: 开放源代码项目
