--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -407,7 +407,7 @@
       href: compliance-offerings.md
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
-    - name: Microsoft 问答 - Azure 备份
+    - name: Microsoft Q&A 问题页面
       href: 'https://docs.microsoft.com/answers/topics/azure-backup.html'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
