--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -67,8 +67,6 @@
           href: cdn-restrict-access-by-country.md
         - name: 通过压缩文件来提高性能
           href: cdn-improve-performance.md
-        - name: 终结点多源
-          href: endpoint-multiorigin.md
         - name: 控制缓存行为
           items:
             - name: 使用缓存规则控制缓存行为
@@ -185,8 +183,8 @@
       href: cdn-billing.md
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/home?forum=azurecdn'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-cdn.html'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/cdn/'
     - name: 定价计算器
