--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -185,8 +185,8 @@
       href: 'https://blogs.msdn.microsoft.com/azuredatalake/'
     - name: 在 UserVoice 上提供反馈
       href: 'https://feedback.azure.com/forums/327234-data-lake'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDataLake'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-data-lake-storage.html'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/data-lake-store/'
     - name: 定价计算器
