--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -852,8 +852,8 @@
       href: sql-database-public-data-sets.md
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/sql-database/'
-    - name: MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/home?forum=ssdsgetstarted'
+    - name: Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-sql-database.html'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/sql-azure'
     - name: 疑难解答
