--- a/articles/governance/management-groups/toc.yml
+++ b/articles/governance/management-groups/toc.yml
@@ -30,3 +30,11 @@
       href: /rest/api/resources/managementgroups
     - name: 资源管理器模板
       href: /azure/templates/microsoft.management/managementgroups
+- name: 资源
+  items:
+    - name: Azure 路线图
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: 定价计算器
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: UserVoice
+      href: 'https://feedback.azure.com/forums/915958-azure-governance?category_id=345064'
