--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -1079,6 +1079,8 @@
       displayName: ARM
 - name: 资源
   items:
+    - name: 问答
+      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-machines.html'
     - name: 创作 ARM 模板
       displayName: 'Azure Resource Manager, ARM'
       href: /azure/azure-resource-manager/
