--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -95,6 +95,8 @@
       href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/managedservices/resource-manager/Microsoft.ManagedServices/preview/2018-06-01-preview'
 - name: 资源
   items:
+    - name: 有关 Azure Lighthouse 的 Microsoft Q&A
+      href: 'https://docs.microsoft.com/en-us/answers/topics/azure-lighthouse.html'
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 定价计算器
