--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -543,6 +543,8 @@
       items:
         - name: 数据移动安全注意事项
           href: data-movement-security-considerations.md
+        - name: 数据访问策略
+          href: data-access-strategies.md
         - name: Azure Integration Runtime IP 地址
           href: azure-integration-runtime-ip-addresses.md
         - name: 在 Azure Key Vault 中存储凭据
@@ -721,8 +723,8 @@
       href: 'https://azure.microsoft.com/updates/?product=data-factory'
     - name: 博客
       href: 'https://techcommunity.microsoft.com/t5/azure-data-factory/bg-p/AzureDataFactoryBlog#'
-    - name: 提出问题 - MSDN 论坛
-      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDataFactory&filter=alltypes&sort=lastpostdesc'
+    - name: 提问 - Microsoft Q&A 问题页面
+      href: 'https://docs.microsoft.com/answers/topics/azure-data-factory.html'
     - name: 提出问题 - Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-data-factory'
     - name: 请求功能
