--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 09/01/2019
-  ms.openlocfilehash: 44d21c07a81dc3fe5912137691b67af1a3e910e2
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: da45a726dcbf8bebd598f81fe27a49e72460cbed
+  ms.sourcegitcommit: 1f25aa993c38b37472cf8a0359bc6f0bf97b6784
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "70239203"
+  ms.lasthandoff: 05/26/2020
+  ms.locfileid: "83849342"
 landingContent:
 - title: 关于 Azure 蓝图
   linkLists:
@@ -81,10 +81,12 @@ landingContent:
   linkLists:
   - linkListType: get-started
     links:
+    - text: 有关 Azure 蓝图的 Microsoft Q&A
+      url: /answers/topics/azure-blueprints.html
     - text: Azure 治理 YouTube 频道
       url: https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ
     - text: 请求产品功能
-      url: https://feedback.azure.com/forums/915958-azure-governance
+      url: https://feedback.azure.com/forums/915958-azure-governance?category_id=345058
     - text: Azure 治理的技术社区
       url: https://techcommunity.microsoft.com/t5/Azure-Governance/bd-p/AzureGovernance
 - title: 参考
