--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -197,8 +197,8 @@
       href: 'https://github.com/Azure/azure-policy'
     - name: GitHub - 社区策略存储库
       href: 'https://github.com/Azure/Community-Policy'
-    - name: 视频 - Build 2018
-      href: 'https://channel9.msdn.com/events/Build/2018/THR2030'
+    - name: 有关 Azure Policy 的 Microsoft Q&A
+      href: /answers/topics/azure-policy.html
     - name: 治理 YouTube 频道
       href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
     - name: 来宾配置视频
@@ -211,9 +211,11 @@
           href: 'https://www.youtube.com/watch?v=fbZBaxcjA-Y'
         - name: 修正任务
           href: 'https://www.youtube.com/watch?v=URE4DUYMgmg'
+    - name: 视频 - Build 2018
+      href: 'https://channel9.msdn.com/events/Build/2018/THR2030'
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: UserVoice
-      href: 'https://feedback.azure.com/forums/915958-azure-governance'
+      href: 'https://feedback.azure.com/forums/915958-azure-governance?category_id=345055'
