--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -31,6 +31,8 @@
       href: storage-files-networking-overview.md
     - name: 关于云分层
       href: storage-sync-cloud-tiering.md
+    - name: 防止意外删除数据
+      href: storage-files-prevent-file-share-deletion.md
     - name: 关于存储帐户
       href: ../common/storage-account-options.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Azure 文件共享快照
@@ -118,6 +120,8 @@
           href: storage-sync-files-server-registration.md
         - name: 添加 Azure 文件同步服务器终结点
           href: storage-sync-files-server-endpoint.md
+        - name: 启用软删除
+          href: storage-files-enable-soft-delete.md
         - name: 管理 Azure 独立云中的存储
           href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 管理数据冗余
