--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -377,6 +377,8 @@
       href: logic-apps-limits-and-config.md
     - name: 定价模型与用量计量
       href: logic-apps-pricing.md
+    - name: Azure CLI
+      href: /cli/azure/ext/logic/logic?view=azure-cli-latest
     - name: Azure PowerShell
       href: /powershell/module/az.logicapp
     - name: REST API
