--- a/articles/data-factory/index.yml
+++ b/articles/data-factory/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: markingmyname
   ms.author: maghan
   ms.date: 10/02/2019
-  ms.openlocfilehash: 5e7c778eb3d5de197044cb51e35875399908d205
-  ms.sourcegitcommit: fdec8e8bdbddcce5b7a0c4ffc6842154220c8b90
+  ms.openlocfilehash: 5ab646f80296352bce30eedcbf9b0de670011118
+  ms.sourcegitcommit: 6a9f01bbef4b442d474747773b2ae6ce7c428c1f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83657236"
+  ms.lasthandoff: 05/27/2020
+  ms.locfileid: "84118738"
 landingContent:
 - title: 关于 Azure 数据工厂
   linkLists:
@@ -108,7 +108,7 @@ landingContent:
   linkLists:
   - linkListType: overview
     links:
-    - text: 将 SSIS 包迁移到 Azure SQL 数据库托管实例
+    - text: 将 SSIS 包迁移到 Azure SQL 托管实例
       url: /azure/data-factory/scenario-ssis-migration-ssisdb-mi
   - linkListType: tutorial
     links:
