--- a/articles/governance/blueprints/toc.yml
+++ b/articles/governance/blueprints/toc.yml
@@ -285,7 +285,7 @@
     - name: GitHub - Azure 蓝图示例
       href: 'https://github.com/Azure/azure-blueprints'
     - name: 有关 Azure 蓝图的 Microsoft Q&A
-      href: /answers/topics/azure-blueprints.html
+      href: /answers/topics/azure-blueprints.html.html
     - name: 治理 YouTube 频道
       href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
     - name: Azure Friday - Azure 蓝图概述
