--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -9,10 +9,17 @@
 - name: 快速入门
   expanded: true
   items:
-    - name: 创建 DB - 门户
-      href: quickstart-create-mariadb-server-database-using-azure-portal.md
-    - name: 创建 DB - Azure CLI
-      href: quickstart-create-mariadb-server-database-using-azure-cli.md
+    - name: 创建 DB
+      items:
+        - name: 创建 DB - 门户
+          href: quickstart-create-mariadb-server-database-using-azure-portal.md
+        - name: 创建 DB - Azure CLI
+          href: quickstart-create-mariadb-server-database-using-azure-cli.md
+        - name: 创建 DB - Azure PowerShell
+          href: quickstart-create-mariadb-server-database-using-azure-powershell.md
+        - name: 创建 DB - ARM 模板
+          href: quickstart-create-mariadb-server-database-arm-template.md
+          displayName: deploy azure resource manager template
     - name: 连接和查询
       items:
         - name: MySQL Workbench
@@ -25,6 +32,8 @@
           href: tutorial-design-database-using-portal.md
         - name: Azure CLI
           href: tutorial-design-database-cli.md
+        - name: Azure PowerShell
+          href: tutorial-design-database-using-powershell.md
 - name: 示例
   items:
     - name: Azure CLI
@@ -119,6 +128,8 @@
           href: howto-restore-server-portal.md
         - name: Azure CLI
           href: howto-restore-server-cli.md
+        - name: Azure PowerShell
+          href: howto-restore-server-powershell.md
     - name: 迁移数据库
       items:
         - name: 转储和还原
@@ -137,12 +148,16 @@
           href: howto-server-parameters.md
         - name: Azure CLI
           href: howto-configure-server-parameters-cli.md
+        - name: Azure PowerShell
+          href: howto-configure-server-parameters-using-powershell.md
     - name: 自动增长存储
       items:
         - name: Azure 门户
           href: howto-auto-grow-storage-portal.md
         - name: Azure CLI
           href: howto-auto-grow-storage-cli.md
+        - name: Azure PowerShell
+          href: howto-auto-grow-storage-powershell.md
     - name: 拒绝公用网络访问
       items:
         - name: Azure 门户
@@ -173,6 +188,8 @@
           href: howto-read-replicas-portal.md
         - name: 使用 Azure CLI、REST API 创建只读副本
           href: howto-read-replicas-cli.md
+        - name: 创建只读副本 - Azure PowerShell
+          href: howto-read-replicas-powershell.md
     - name: 疑难解答
       items:
         - name: 排查连接错误
@@ -201,6 +218,8 @@
           href: howto-restart-server-portal.md
         - name: Azure CLI
           href: howto-restart-server-cli.md
+        - name: Azure PowerShell
+          href: howto-restart-server-powershell.md
 - name: 参考
   items:
     - name: Azure CLI
