--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -767,9 +767,26 @@
     - name: Synapse Analytics
       tocHref: /azure/synapse-analytics/
       topicHref: /azure/synapse-analytics/
-    - name: SQL 数据库
-      tocHref: /azure/sql-database/
-      topicHref: /azure/sql-database/
+    - name: Azure SQL
+      tocHref: /azure/azure-sql/
+      topicHref: /azure/azure-sql/
+      items:
+        - name: SQL 数据库
+          tocHref: /azure/azure-sql/database
+          topicHref: /azure/azure-sql/database
+        - name: SQL 托管实例
+          tocHref: /azure/azure-sql/managed-instance
+          topicHref: /azure/azure-sql/managed-instance
+        - name: Azure VM 上的 SQL Server
+          tocHref: /azure/azure-sql/virtual-machines
+          topicHref: /azure/azure-sql/virtual-machines
+          items:
+            - name: Windows
+              tocHref: /azure/azure-sql/virtual-machines/windows
+              topicHref: /azure/azure-sql/virtual-machines/windows
+            - name: Linux
+              tocHref: /azure/azure-sql/virtual-machines/linux
+              topicHref: /azure/azure-sql/virtual-machines/linux
     - name: Azure SQL Edge
       tocHref: /azure/azure-sql-edge/
       topicHref: /azure/azure-sql-edge/
