commit translated contents

--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -7,12 +7,15 @@
 - name: 快速入门
   expanded: true
   items:
-    - name: 创建 Databricks 工作区 - 门户
-      href: quickstart-create-databricks-workspace-portal.md
-    - name: 创建 Databricks 工作区 - 资源管理器模板
-      href: quickstart-create-databricks-workspace-resource-manager-template.md
-    - name: 创建 Databricks 工作区 - 虚拟网络
-      href: quickstart-create-databricks-workspace-vnet-injection.md
+    - name: 创建工作区
+      items:
+        - name: 门户
+          href: quickstart-create-databricks-workspace-portal.md
+        - name: ARM 模板
+          displayName: Resource Manager
+          href: quickstart-create-databricks-workspace-resource-manager-template.md
+        - name: 虚拟网络
+          href: quickstart-create-databricks-workspace-vnet-injection.md
 - name: 教程
   items:
     - name: 查询在 Docker 容器中运行的 SQL Server
